test/org/midica/testfiles/failing/eff-flow-note-not-allowed-1.midica
INCLUDE inc/instruments.midica


0: vol.note(c).set(100%)
